<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SimpleCache</string>
    <string name="action_settings">Settings</string>
    <string name="tab_title_map">Map</string>
    <string name="tab_title_compass">Compass</string>
    <string name="tab_title_details">Details</string>
    <string name="navigate_to">Navigate to point</string>
    <string name="stop_navigation">Stop navigation</string>

    <!-- map strings -->
    <string name="map_user_title">Geocacher</string>
    <string name="map_user_here">You are here!</string>

    <!-- dialog labels -->
    <string name="button_search_cache">Let\'s go!</string>
    <string name="button_fetch_details">Fetch details</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_ok">Okay</string>
    <string name="cache_size">Size:</string>
    <string name="cache_difficulty_terrain">Difficulty/Terrain:</string>
    <string name="degree">°</string>
    <string name="decimal_degrees">Decimal Degrees</string>
    <string name="decimal_minutes">Decimal Minutes</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="minutes">\'</string>
    <string name="hint">Hint</string>
    <string name="description">Description</string>
    <string name="empty_filler">nothing</string>
    <string name="typeImage">Type</string>

    <!-- progress labels -->
    <string name="progress_ready">Ready</string>
    <string name="progress_fetch_cache">Fetch cache data</string>
    <string name="progress_fetch_route">Fetch routing data</string>
    <string name="dialog_navigate_to_lat">Latitude:</string>
    <string name="dialog_navigate_to_lon">Longitude:</string>

    <!-- hint texts -->
    <string name="decimal_degrees_lat_hint">+/- sets N/S. Range from -90 to 90</string>
    <string name="decimal_degrees_lon_hint">+/- sets E/W. Range from -180 to 180</string>
    <string name="decimal_minutes_hint">Set positive values from 0 to 60</string>

</resources>