<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/cache_yellow" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical" >
        <TextView
                android:id="@+id/cache_name"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_margin="5dp"
                android:textSize="18dp"
                android:textStyle="bold" />
        <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_margin="5dp"
                android:textSize="15dp"
                android:textStyle="bold"
                android:text="@string/hint" />
        <TextView
                android:id="@+id/cache_hint"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_margin="5dp"
                android:text="@string/empty_filler" />
        <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_margin="5dp"
                android:textSize="15dp"
                android:textStyle="bold"
                android:text="@string/description" />
        <TextView
                android:id="@+id/cache_description"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_margin="5dp"
                android:text="@string/empty_filler" />
    </LinearLayout>
</ScrollView>